# OpenGLPractice

./: .gitignore  CMakeLists.txt  README.md
Data/: test.frag  test.geom  test.tesc  test.tese  test.vert
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: CMakeLists.txt  GLFWWindow.cpp  GLFWWindow.hpp  GLShader.cpp  GLShader.hpp  ICoreWindow.hpp  main.cxx
src/Core/: GLFWWindow.cpp  GLFWWindow.hpp  GLShader.cpp  GLShader.hpp  GameLoop.cpp  GameLoop.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
src/Core/GL/: GLFWWindow.cpp  GLFWWindow.hpp  GLShader.cpp  GLShader.hpp
src/Core/Interface/: ICoreWindow.hpp
src/Game/: NanoGame.cpp  NanoGame.hpp
src/engine/core/: GameLoop.hpp  InputHandler.cpp  InputHandler.hpp  Shader.hpp  Window.hpp
